--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "ewine",
+  "name": "desafio",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "nodemon app.js -e js,mjs,json,html,css,jpg"
+    "test": "clear && nodemon app.js -e js,mjs,json,html,css",
+    "start": "node app.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
