--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "desafio",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
-    "test": "clear && nodemon app.js -e js,mjs,json,html,css",
+    "test": "nodemon src/app.js -e js,mjs,json,ejs,css",
     "start": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
