--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "desafio",
   "version": "1.0.0",
-  "description": "",
+  "description": "1. [Descripcion y oferta de productos](#general-info)",
   "main": "src/app.js",
   "scripts": {
     "test": "nodemon src/app.js -e js,mjs,ejs,css",
-    "start": "node app.js"
+    "start": "node app.js",
+    "db:init": "sequelize init",
+    "db:create": "sequelize db:create",
+    "md:create": "sequelize model:create --name User --attributes name:string,email:string,password:string",
+    "db:migrate": "sequelize db:migrate:undo:all && sequelize db:migrate"
   },
   "keywords": [],
   "author": "",
@@ -14,15 +18,28 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "db-migrate-mysql": "^2.2.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "method-override": "^3.0.0",
     "multer": "^1.4.4",
-    "override": "^0.0.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "override": "^0.0.1",
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+    "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.4.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tatulio/grupo_7_ewine.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Tatulio/grupo_7_ewine/issues"
+  },
+  "homepage": "https://github.com/Tatulio/grupo_7_ewine#readme"
 }
